Added 'view route' button to each ride to be synced to google map

--- a/templates/search.html
+++ b/templates/search.html
@@ -335,6 +335,11 @@
               </span>
             </p>
           </div>
+
+          <div class="row">
+            <button type="button" id="view-route-btn" class="btn btn-link">View Route</button>
+          </div>
+
         </td>
 
         <td class="col-xs-2" style="padding-left:20px;">
