Fixed small bug where date wasn't showing on each ride. Missed an ending quote in DOM generated by js.

--- a/templates/search.html
+++ b/templates/search.html
@@ -342,6 +342,8 @@
 
         </td>
 
+        <div id="addmaphere"></div>
+
         <td class="col-xs-2" style="padding-left:20px;">
           <div class="row">
             <span><h1>${{ ride.cost }}</h1></span>
@@ -426,6 +428,7 @@
 <script type="text/javascript" src="static/search.js"></script>
 <!-- <script type="text/javascript" src="static/reverse_input.js"></script> -->
 <script type="text/javascript" src="static/user_location.js"></script>
+<script type="text/javascript" src="static/view_route.js"></script>
 
 
 {% endblock %}
