Map now showing proper starting end ending points

--- a/templates/search.html
+++ b/templates/search.html
@@ -25,6 +25,7 @@
         /*height: 100%;*/
         height: 50em;
         width: 50em;
+        /*display: none;*/
       }
       /* Optional: Makes the sample page fill the window. */
       /*html, body {
@@ -360,7 +361,7 @@
             <button type="button" class="btn btn-link view-route-btn">View Route</button>
           </div>
 
-          <div class="add-map-here"></div>
+          <div class="add-map-here" display=false></div>
 
         </td>
 
