Can now view route successfully, and make the map disappear. Back end work in seed.py completed to get mileage and distance for trip

--- a/templates/search.html
+++ b/templates/search.html
@@ -361,7 +361,7 @@
             <button type="button" class="btn btn-link view-route-btn">View Route</button>
           </div>
 
-          <div class="add-map-here" display=false></div>
+          <div class="add-map-here"></div>
 
         </td>
 
