Fixed bug in html to make google maps work again

--- a/templates/search.html
+++ b/templates/search.html
@@ -356,35 +356,18 @@
               </span>
             </p>
           </div>
+          <br>
 
-         <!--  {% if ride.mileage is not none %} -->
-
-          <!-- <div class="row">
-            <span class="btn-group">
-              
-              <button type="button" style="display:inline-block;"class="btn btn-link view-route-btn">View Route</button>
-              <h5>{{ ride.mileage }}, Est Travel Time: {{ ride.duration }}</h5>
-            </span>
-          </div> -->
+          {% if ride.mileage and ride.duration is not none %}
           <div class="row">
-            <p>
-              <span class="btn-group">
-                <button type="button" style="display:inline-block;"class="btn btn-link view-route-btn">View Route</button>
-                <p>{{ ride.mileage }}, Est Travel Time: {{ ride.duration }}</p>
-              </span>
-            </p>
+            <span class="glyphicon glyphicon-time"></span>
+            <span>{{ ride.mileage }}, Est Travel Time: {{ ride.duration }}</span>
           </div>
-            
-              
-              
-        
-        <!--   {% else %}
-          <div class="row">
-            <button type="button" class="btn btn-link view-route-btn">View Route</button>
-          </div>
-          {% endif %} -->
-          
+          {% endif %}
 
+          <div class="row">
+            <button type="button"class="btn btn-link view-route-btn">View Route</button>
+          </div>
 
           <div class="add-map-here"></div>
 
