--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,12 @@
 {% extends 'base.html' %}
 
-{% block Title %} Home {% endblock %}
+{% block Title %} Profile {% endblock %}
+
+{% block head %} 
+<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> -->
+<!-- <script type="text/javascript" src="static/autocomplete.js"></script> -->
+
+{% endblock %}
 
 {% block content %}
 <div class="container">
