--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <!-- <link rel="stylesheet"
-        href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/united/bootstrap.min.css"> -->
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <script type="text/javascript" src="static/facebook_login.js"></script>
+  <script src="http://code.jquery.com/jquery.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 
   <title>{% block title %} Title {% endblock %}</title>
@@ -36,76 +37,23 @@
     padding: 14px 14px 0;
     overflow:hidden;
     background-color:rgba(255,255,255,.8);
-}
-#login-dp .help-block{
-    font-size:12px    
-}
-#login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
-    border-top:1px solid #ddd;
-    clear:both;
-    padding:14px;
-}
-#login-dp .social-buttons{
-    margin:12px 0    
-}
-#login-dp .social-buttons a{
-    width: 49%;
-}
-#login-dp .form-group {
-    margin-bottom: 10px;
-}
-.btn-fb{
-    color: #fff;
-    background-color:#3b5998;
-}
-.btn-fb:hover{
-    color: #fff;
-    background-color:#496ebc 
-}
-.btn-tw{
-    color: #fff;
-    background-color:#55acee;
-}
-.btn-tw:hover{
-    color: #fff;
-    background-color:#59b5fa;
-}
-@media(max-width:768px){
-    #login-dp{
-        background-color: inherit;
-        color: #fff;
-    }
-    #login-dp .bottom{
-        background-color: inherit;
-        border-top:0 none;
     }
 
-        
+    #login-dp .bottom{
+        background-color:rgba(255,255,255,.8);
+        border-top:1px solid #ddd;
+        clear:both;
+        padding:14px;
     }
-    /*nav navbar-nav*/
+    #login-dp .social-buttons{
+        margin:12px 0    
+    }
   </style>
 
 </head>
 
 <body>
   <div id="fb-root"></div>
-
-
-  <!-- Show flashed messages, if any-->
-  <div>
-  {% with messages=get_flashed_messages() %}
-    {% if messages %}
-      <fieldset>
-        <ul>
-          {% for message in messages %}
-            <li>{{ message }}</li>
-          {% endfor %}
-        </ul>
-      </fieldset>
-    {% endif %}
-  {% endwith %}
-</div>
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -146,39 +94,23 @@
       </form> -->
 
 
-       <!--  {% if session.get('current_user') %}
+        {% if session.get('current_user') %}
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/profile/{{ session.get('current_user') }}">Profile</a></li>
 
-        {% else %}
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/register">Register</a></li>
-        {% endif %} -->
-<!-- 
-        <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
-        <ul id="login-dp" class="dropdown-menu">
-          <li>
-             <div class="row">
-                <div class="col-md-12">
-                  Login via
-                  <div class="social-buttons">
-                    <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="false" data-auto-logout-link="false"></div>
-         </div>
-                </div>
-             </div>
-          </li>
-        </ul>
-        </li>
-      </ul>
 
-  -->     
+        {% endif %}
+   
  
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+          {% if session.get('current_user') %}
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Logout</b> <span class="caret"></span></a>
+          {% else %}
+           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
+
+           {% endif %}
           <ul id="login-dp" class="dropdown-menu">
             <li>
                <div class="row">
@@ -186,10 +118,7 @@
                     Login via
                     <div class="social-buttons">
 
-                       <!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="true" data-auto-logout-link="true"></div> -->
-
                        <fb:login-button autologoutlink="true" size="large" show-faces="true" onlogin="checkLoginState();"></fb:login-button>
-
 
                        <div id="status"></div>
                     
@@ -232,10 +161,7 @@
   {% block content %}
   {% endblock %}
 
-<script type="text/javascript" src="static/facebook_login.js"></script>
 
-<!-- <script src="http://code.jquery.com/jquery.js"></script> -->
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </body>
 
 </html>
