Adjusted ride form input intake - now computing distance and mileage, adjusting empty strings to None

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,19 +124,14 @@
             <li>
                <div class="row">
                   <div class="col-md-12">
-                    Login via
                     <div class="social-buttons">
 
                        <fb:login-button autologoutlink="true" size="large" show-faces="true" onlogin="checkLoginState();"></fb:login-button>
-
-                       <div id="status"></div>
                     
                     </div>
                    
                   </div>
-                  <div class="bottom text-center">
-                    Welcome :)
-                  </div>
+                  <div id="status"class="bottom text-center">Welcome :)</div>
                </div>
             </li>
           </ul>
