--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,8 +3,7 @@
 {% block Title %} Profile {% endblock %}
 
 {% block head %} 
-<!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> -->
-<!-- <script type="text/javascript" src="static/autocomplete.js"></script> -->
+<script type="text/javascript" src="../static/facebook_login.js"></script>
 
 {% endblock %}
 
@@ -19,7 +18,7 @@
     </p>
     <div class="well">To Do<br> - Add pending ride requests<br> - Fix time display</div>
 
-{% if rides_offered %}
+{% if rides_offered_requests %}
 
     <table class="table table-hover">
     <h2>Approve/Deny Ride Requests</h2>
@@ -37,9 +36,7 @@
       </tr>
     </thead>
     <tbody>
-{% for ride in rides_offered %}
-
-{% if ride.requests %}
+{% for ride in rides_offered_requests %}
 
 {% for request in ride.requests %}
       <tr>
@@ -65,15 +62,48 @@
             </form>
         </td>
       </tr>
-    {% endfor %}
+{% endfor %}
+{% endfor %}
     </tbody>
   </table>
 
 {% endif %}
+
+
+{% if rides_taking_requests %}
+
+    <table class="table table-hover">
+    <h2>Requested Rides - pending</h2>
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>From</th>
+        <th>Time</th>
+        <th>To</th>
+        <th>Time</th>
+        <th>Cost</th>
+        <th>Driver</th>
+        <th>Seats Requested</th>
+      </tr>
+    </thead>
+    <tbody>
+{% for request in rides_taking_requests %}
+
+      <tr>
+        <td>{{ request.ride.start_timestamp.strftime('%Y-%m-%d') }}</td>
+        <td>{{ request.ride.start_city }}, {{ request.ride.start_state }}</td>
+        <td>{{ request.ride.start_timestamp.strftime('%H:%M') }}</td>
+        <td>{{ request.ride.end_city }}, {{ request.ride.end_state }}</td>
+        <td>{{ request.ride.end_timestamp.strftime('%H:%M') }}</td>
+        <td>{{ request.ride.cost }}</td>
+        <td>{{ request.ride.user.first_name }}</td>
+        <td>{{ request.seats }}</td>
+      </tr>
 {% endfor %}
+    </tbody>
+  </table>
+
 {% endif %}
-
-
 
 
 {% if rides_offered %}
