--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
-                    <label for="starting">Starting Destination</label>
-                    <p>Enter City, State or Zip</p>
+                    <label for="starting">From</label>
                     <input type="text" class="form-control" id="autocomplete" name="start-address"
                     aria-describedby="starting destination" onFocus="geolocate()" placeholder="Enter Starting Location" required>
                 </div>
@@ -52,8 +51,7 @@
 
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
-                    <label for="ending">Ending Destination</label>
-                    <p>Enter City, State or Zip</p>
+                    <label for="ending">To</label>
                     <input type="text" class="form-control" id="autocomplete2" name="end-address"
                     aria-describedby="ending destination" onFocus="geolocate()" placeholder="Enter Ending Location" required>
                 </div>
