--- a/templates/search.html
+++ b/templates/search.html
@@ -42,7 +42,7 @@
 
 {% block content %}
 <div class="container">
-  <div class="well">
+<!--   <div class="well">
     To Do:<br>
     - Don't show rides you are the driver for!!!<br>
     Issues with Search:<br>
@@ -50,7 +50,7 @@
     - Sort by time, different tz's! what to do! <br>
     - Removing all address data to re-search doesn't work<br>
     - Only 43 rides are showing, you can view all ones returned in terminal<br>
-  </div>
+  </div> -->
 
   <form action="/search" id="searchform">
     <div class="row form-inline">
