Re-seeded database with new data, adjusted how seed.py works for sustainable ride feed in future

--- a/templates/search.html
+++ b/templates/search.html
@@ -170,6 +170,7 @@
         <input type="text" id="to" name="to">
         <input id="current-offset" type="hidden" value="0"></input>
         <input id="max-offset" type="hidden" value="{{ page_count - 1 }}"></input>
+        <input id="active-page" type="hidden" value="1"></input>
       </div>
     </div>
   </div>
