--- a/templates/search.html
+++ b/templates/search.html
@@ -17,6 +17,7 @@
  -->
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places" async defer></script>
+<link rel="stylesheet" rel="text/css" href="static/search.css">
 
 
 <style>
