--- a/templates/index.html
+++ b/templates/index.html
@@ -17,22 +17,26 @@
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places" async defer></script> -->
 <script type="text/javascript" src="static/autocomplete_index.js"></script>
 
+<link rel="stylesheet" rel="text/css" href="static/base.css">
 
 {% endblock %}
 
 {% block content %}
 
 <!-- Page header -->
-<div class="page-header">
-    <h1>Find your next Seat</h1>
-</div>
+
 <div class="container">
+    <div class="row">
+        <div class="col-xs-12 main">
+            <h1 class="main-title">Find your next Seat</h1>
+        </div>
+    </div>
 <form action="/search">
     <div class="form-group">
-        <div class="row">
+        <div class="row main-search">
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
-                    <label for="starting">From</label>
+                    <label id="from" for="starting" class="hidden">From</label>
                     <input type="text" class="form-control" id="autocomplete" name="start-address"
                     aria-describedby="starting destination" onFocus="geolocate()" placeholder="Enter Starting Location" required>
                 </div>
@@ -51,7 +55,7 @@
 
             <div class="col-xs-12 col-sm-6">
                 <div class="input-group">
-                    <label for="ending">To</label>
+                    <label for="ending" class="hidden">To</label>
                     <input type="text" class="form-control" id="autocomplete2" name="end-address"
                     aria-describedby="ending destination" onFocus="geolocate()" placeholder="Enter Ending Location" required>
                 </div>
@@ -70,7 +74,7 @@
 
         <br>
         <!-- submit button -->
-        <button type="submit" class="btn btn-primary">Submit</button>
+       <!--  <button type="submit" class="btn btn-primary">Submit</button> -->
 
     </div>
 </form>
