--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBm2Vj5UTzzCPn_6ZYRQxOT55U3PtKXgQ&libraries=places" async defer></script> -->
 <script type="text/javascript" src="static/autocomplete_index.js"></script>
 
-<link rel="stylesheet" rel="text/css" href="static/base.css">
+<link rel="stylesheet" rel="text/css" href="static/home.css">
 
 {% endblock %}
 
@@ -74,7 +74,7 @@
 
         <br>
         <!-- submit button -->
-       <!--  <button type="submit" class="btn btn-primary">Submit</button> -->
+        <button type="submit" class="btn btn-primary">Submit</button>
 
     </div>
 </form>
