--- a/templates/rideform.html
+++ b/templates/rideform.html
@@ -289,8 +289,8 @@ submit.on('click', function(evt) {
     // }
     $.get('/check-login.json', promptLogin)
     evt.stopPropagation();
-    $('a.dropdown-toggle').dropdown('toggle')
-    $('#login-message').text('Please log in to submit a ride');
+    $('.dropdown').addClass('open')
+    $('#status').text('Please log in to submit a ride');
     
 });
 
