Started integration tests

--- a/static/base.css
+++ b/static/base.css
@@ -32,3 +32,11 @@
 #login-dp .social-buttons{
     margin:12px 0    
 }
+
+/*nav {
+    font-family: 'Roboto', sans-serif;
+}*/
+/*body {
+    font-family: 'Roboto Slab', serif;
+    font-family: 'Roboto', sans-serif;
+}*/
