--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
             <h1 class="main-title">Find your next Seat</h1>
         </div>
     </div>
-<form action="/search">
+<form action="/search" id="indexsearch">
     <div class="form-group">
         <div class="row main-search">
             <div class="col-xs-12 col-sm-6">
