adjusted navbar color

--- a/static/base.css
+++ b/static/base.css
@@ -5,7 +5,7 @@
     background: transparent;
     border: none;
     border-radius: 0;
-    color: #FFF;
+    color: black;
     font-family: 'Droid Sans', sans-serif;
     font-size: 20px;
 }
